// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom seq items seq in seq in seq 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": CollectionItem {
    "anchor": null,
    "commentRange": null,
    "doc": Document {
      "src": "
-	-
    - value
",
    },
    "indicator": "-",
    "item": CollectionItem {
      "anchor": null,
      "commentRange": null,
      "doc": Document {
        "src": "
-	-
    - value
",
      },
      "indicator": "-",
      "item": Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "
-	-
    - value
",
        },
        "range": Range {
          "end": 16,
          "start": 11,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 16,
          "start": 11,
        },
      },
      "range": Range {
        "end": 16,
        "start": 9,
      },
      "tag": null,
      "type": "SEQ_ITEM",
      "valueRange": Range {
        "end": 16,
        "start": 9,
      },
    },
    "range": Range {
      "end": 16,
      "start": 3,
    },
    "tag": null,
    "type": "SEQ_ITEM",
    "valueRange": Range {
      "end": 16,
      "start": 3,
    },
  },
  "range": Range {
    "end": 16,
    "start": 1,
  },
  "raw": "-	-
    - value",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 16,
    "start": 1,
  },
}
`;

exports[`parse simple seq items bare 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "- \\"value\\"",
    },
    "range": Range {
      "end": 9,
      "start": 2,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 9,
      "start": 2,
    },
  },
  "range": Range {
    "end": 9,
    "start": 0,
  },
  "raw": "- \\"value\\"",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 9,
    "start": 0,
  },
}
`;

exports[`parse simple seq items complex mapping key 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "? - \\"value\\" : ",
    },
    "range": Range {
      "end": 12,
      "start": 4,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 11,
      "start": 4,
    },
  },
  "range": Range {
    "end": 12,
    "start": 2,
  },
  "raw": "- \\"value\\"",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 11,
    "start": 2,
  },
}
`;

exports[`parse simple seq items flow seq value 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "[ - \\"value\\" ]",
    },
    "range": Range {
      "end": 12,
      "start": 4,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 11,
      "start": 4,
    },
  },
  "range": Range {
    "end": 12,
    "start": 2,
  },
  "raw": "- \\"value\\"",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 11,
    "start": 2,
  },
}
`;

exports[`parse simple seq items indented block 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "    - - \\"value\\"
  x",
    },
    "range": Range {
      "end": 15,
      "start": 8,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 15,
      "start": 8,
    },
  },
  "range": Range {
    "end": 15,
    "start": 6,
  },
  "raw": "- \\"value\\"",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 15,
    "start": 6,
  },
}
`;

exports[`parse simple seq items newline before & after 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "
- \\"value\\"
",
    },
    "range": Range {
      "end": 10,
      "start": 3,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 10,
      "start": 3,
    },
  },
  "range": Range {
    "end": 10,
    "start": 1,
  },
  "raw": "- \\"value\\"",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 10,
    "start": 1,
  },
}
`;

exports[`parse simple seq items seq value 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "- - \\"value\\"
- ",
    },
    "range": Range {
      "end": 11,
      "start": 4,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 11,
      "start": 4,
    },
  },
  "range": Range {
    "end": 11,
    "start": 2,
  },
  "raw": "- \\"value\\"",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 11,
    "start": 2,
  },
}
`;

exports[`parse simple seq items with comment 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": Range {
      "end": 29,
      "start": 14,
    },
    "doc": Document {
      "src": "
  - \\"value\\" #comment # here!
",
    },
    "range": Range {
      "end": 29,
      "start": 5,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 12,
      "start": 5,
    },
  },
  "range": Range {
    "end": 29,
    "start": 3,
  },
  "raw": "- \\"value\\"",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 12,
    "start": 3,
  },
}
`;

exports[`parse simple seq items with props 1`] = `
CollectionItem {
  "anchor": "anchor",
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "- !tag! &anchor - \\"value\\"
- ",
    },
    "range": Range {
      "end": 25,
      "start": 18,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 25,
      "start": 18,
    },
  },
  "range": Range {
    "end": 25,
    "start": 2,
  },
  "raw": "- \\"value\\"",
  "tag": "tag!",
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 25,
    "start": 16,
  },
}
`;

exports[`seq items "- *alias" bare 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "- *alias",
    },
    "range": Range {
      "end": 8,
      "start": 2,
    },
    "tag": null,
    "type": "ALIAS",
    "valueRange": Range {
      "end": 8,
      "start": 3,
    },
  },
  "range": Range {
    "end": 8,
    "start": 0,
  },
  "raw": "- *alias",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 8,
    "start": 0,
  },
}
`;

exports[`seq items "- *alias" complex mapping key 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "? - *alias
: ",
    },
    "range": Range {
      "end": 10,
      "start": 4,
    },
    "tag": null,
    "type": "ALIAS",
    "valueRange": Range {
      "end": 10,
      "start": 5,
    },
  },
  "range": Range {
    "end": 10,
    "start": 2,
  },
  "raw": "- *alias",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 10,
    "start": 2,
  },
}
`;

exports[`seq items "- *alias" flow seq value 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "[ - *alias
]",
    },
    "range": Range {
      "end": 10,
      "start": 4,
    },
    "tag": null,
    "type": "ALIAS",
    "valueRange": Range {
      "end": 10,
      "start": 5,
    },
  },
  "range": Range {
    "end": 10,
    "start": 2,
  },
  "raw": "- *alias",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 10,
    "start": 2,
  },
}
`;

exports[`seq items "- *alias" indented block 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "    - - *alias
  x",
    },
    "range": Range {
      "end": 14,
      "start": 8,
    },
    "tag": null,
    "type": "ALIAS",
    "valueRange": Range {
      "end": 14,
      "start": 9,
    },
  },
  "range": Range {
    "end": 14,
    "start": 6,
  },
  "raw": "- *alias",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 14,
    "start": 6,
  },
}
`;

exports[`seq items "- *alias" newline before & after 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "
- *alias
",
    },
    "range": Range {
      "end": 9,
      "start": 3,
    },
    "tag": null,
    "type": "ALIAS",
    "valueRange": Range {
      "end": 9,
      "start": 4,
    },
  },
  "range": Range {
    "end": 9,
    "start": 1,
  },
  "raw": "- *alias",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 9,
    "start": 1,
  },
}
`;

exports[`seq items "- *alias" seq value 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "- - *alias
- ",
    },
    "range": Range {
      "end": 10,
      "start": 4,
    },
    "tag": null,
    "type": "ALIAS",
    "valueRange": Range {
      "end": 10,
      "start": 5,
    },
  },
  "range": Range {
    "end": 10,
    "start": 2,
  },
  "raw": "- *alias",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 10,
    "start": 2,
  },
}
`;

exports[`seq items "- *alias" with comment 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": Range {
      "end": 28,
      "start": 13,
    },
    "doc": Document {
      "src": "
  - *alias #comment # here!
",
    },
    "range": Range {
      "end": 28,
      "start": 5,
    },
    "tag": null,
    "type": "ALIAS",
    "valueRange": Range {
      "end": 11,
      "start": 6,
    },
  },
  "range": Range {
    "end": 28,
    "start": 3,
  },
  "raw": "- *alias",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 11,
    "start": 3,
  },
}
`;

exports[`seq items "- *alias" with props 1`] = `
CollectionItem {
  "anchor": "anchor",
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "- !tag! &anchor - *alias
- ",
    },
    "range": Range {
      "end": 24,
      "start": 18,
    },
    "tag": null,
    "type": "ALIAS",
    "valueRange": Range {
      "end": 24,
      "start": 19,
    },
  },
  "range": Range {
    "end": 24,
    "start": 2,
  },
  "raw": "- *alias",
  "tag": "tag!",
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 24,
    "start": 16,
  },
}
`;

exports[`seq items "- >+2\\n       multiple\\n       lines" bare 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": ">+2",
    "commentRange": null,
    "doc": Document {
      "src": "- >+2
       multiple
       lines",
    },
    "range": Range {
      "end": 34,
      "start": 2,
    },
    "tag": null,
    "type": "BLOCK",
    "valueRange": Range {
      "end": 34,
      "start": 6,
    },
  },
  "range": Range {
    "end": 34,
    "start": 0,
  },
  "raw": "- >+2
       multiple
       lines",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 34,
    "start": 0,
  },
}
`;

exports[`seq items "- >+2\\n       multiple\\n       lines" complex mapping key 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": ">+2",
    "commentRange": null,
    "doc": Document {
      "src": "? - >+2
       multiple
       lines
: ",
    },
    "range": Range {
      "end": 36,
      "start": 4,
    },
    "tag": null,
    "type": "BLOCK",
    "valueRange": Range {
      "end": 36,
      "start": 8,
    },
  },
  "range": Range {
    "end": 36,
    "start": 2,
  },
  "raw": "- >+2
       multiple
       lines",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 36,
    "start": 2,
  },
}
`;

exports[`seq items "- >+2\\n       multiple\\n       lines" flow seq value 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": ">+2",
    "commentRange": null,
    "doc": Document {
      "src": "[ - >+2
       multiple
       lines
]",
    },
    "range": Range {
      "end": 36,
      "start": 4,
    },
    "tag": null,
    "type": "BLOCK",
    "valueRange": Range {
      "end": 36,
      "start": 8,
    },
  },
  "range": Range {
    "end": 36,
    "start": 2,
  },
  "raw": "- >+2
       multiple
       lines",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 36,
    "start": 2,
  },
}
`;

exports[`seq items "- >+2\\n       multiple\\n       lines" indented block 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": ">+2",
    "commentRange": null,
    "doc": Document {
      "src": "    - - >+2
       multiple
       lines
  x",
    },
    "range": Range {
      "end": 40,
      "start": 8,
    },
    "tag": null,
    "type": "BLOCK",
    "valueRange": Range {
      "end": 40,
      "start": 12,
    },
  },
  "range": Range {
    "end": 40,
    "start": 6,
  },
  "raw": "- >+2
       multiple
       lines",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 40,
    "start": 6,
  },
}
`;

exports[`seq items "- >+2\\n       multiple\\n       lines" newline before & after 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": ">+2",
    "commentRange": null,
    "doc": Document {
      "src": "
- >+2
       multiple
       lines
",
    },
    "range": Range {
      "end": 35,
      "start": 3,
    },
    "tag": null,
    "type": "BLOCK",
    "valueRange": Range {
      "end": 35,
      "start": 7,
    },
  },
  "range": Range {
    "end": 35,
    "start": 1,
  },
  "raw": "- >+2
       multiple
       lines",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 35,
    "start": 1,
  },
}
`;

exports[`seq items "- >+2\\n       multiple\\n       lines" seq value 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": ">+2",
    "commentRange": null,
    "doc": Document {
      "src": "- - >+2
       multiple
       lines
- ",
    },
    "range": Range {
      "end": 36,
      "start": 4,
    },
    "tag": null,
    "type": "BLOCK",
    "valueRange": Range {
      "end": 36,
      "start": 8,
    },
  },
  "range": Range {
    "end": 36,
    "start": 2,
  },
  "raw": "- >+2
       multiple
       lines",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 36,
    "start": 2,
  },
}
`;

exports[`seq items "- >+2\\n       multiple\\n       lines" with comment 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": ">+2",
    "commentRange": Range {
      "end": 25,
      "start": 10,
    },
    "doc": Document {
      "src": "
  - >+2 #comment # here!
       multiple
       lines
",
    },
    "range": Range {
      "end": 54,
      "start": 5,
    },
    "tag": null,
    "type": "BLOCK",
    "valueRange": Range {
      "end": 54,
      "start": 26,
    },
  },
  "range": Range {
    "end": 54,
    "start": 3,
  },
  "raw": "- >+2 #comment # here!
       multiple
       lines",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 54,
    "start": 3,
  },
}
`;

exports[`seq items "- >+2\\n       multiple\\n       lines" with props 1`] = `
CollectionItem {
  "anchor": "anchor",
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": ">+2",
    "commentRange": null,
    "doc": Document {
      "src": "- !tag! &anchor - >+2
       multiple
       lines
- ",
    },
    "range": Range {
      "end": 50,
      "start": 18,
    },
    "tag": null,
    "type": "BLOCK",
    "valueRange": Range {
      "end": 50,
      "start": 22,
    },
  },
  "range": Range {
    "end": 50,
    "start": 2,
  },
  "raw": "- >+2
       multiple
       lines",
  "tag": "tag!",
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 50,
    "start": 16,
  },
}
`;

exports[`seq items "- \\"multiline\\nquote\\"" bare 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "- \\"multiline
quote\\"",
    },
    "range": Range {
      "end": 19,
      "start": 2,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 19,
      "start": 2,
    },
  },
  "range": Range {
    "end": 19,
    "start": 0,
  },
  "raw": "- \\"multiline
quote\\"",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 19,
    "start": 0,
  },
}
`;

exports[`seq items "- \\"multiline\\nquote\\"" complex mapping key 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "? - \\"multiline
quote\\"
: ",
    },
    "range": Range {
      "end": 21,
      "start": 4,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 21,
      "start": 4,
    },
  },
  "range": Range {
    "end": 21,
    "start": 2,
  },
  "raw": "- \\"multiline
quote\\"",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 21,
    "start": 2,
  },
}
`;

exports[`seq items "- \\"multiline\\nquote\\"" flow seq value 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "[ - \\"multiline
quote\\"
]",
    },
    "range": Range {
      "end": 21,
      "start": 4,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 21,
      "start": 4,
    },
  },
  "range": Range {
    "end": 21,
    "start": 2,
  },
  "raw": "- \\"multiline
quote\\"",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 21,
    "start": 2,
  },
}
`;

exports[`seq items "- \\"multiline\\nquote\\"" indented block 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "    - - \\"multiline
quote\\"
  x",
    },
    "range": Range {
      "end": 25,
      "start": 8,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 25,
      "start": 8,
    },
  },
  "range": Range {
    "end": 25,
    "start": 6,
  },
  "raw": "- \\"multiline
quote\\"",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 25,
    "start": 6,
  },
}
`;

exports[`seq items "- \\"multiline\\nquote\\"" newline before & after 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "
- \\"multiline
quote\\"
",
    },
    "range": Range {
      "end": 20,
      "start": 3,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 20,
      "start": 3,
    },
  },
  "range": Range {
    "end": 20,
    "start": 1,
  },
  "raw": "- \\"multiline
quote\\"",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 20,
    "start": 1,
  },
}
`;

exports[`seq items "- \\"multiline\\nquote\\"" seq value 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "- - \\"multiline
quote\\"
- ",
    },
    "range": Range {
      "end": 21,
      "start": 4,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 21,
      "start": 4,
    },
  },
  "range": Range {
    "end": 21,
    "start": 2,
  },
  "raw": "- \\"multiline
quote\\"",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 21,
    "start": 2,
  },
}
`;

exports[`seq items "- \\"multiline\\nquote\\"" with props 1`] = `
CollectionItem {
  "anchor": "anchor",
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "- !tag! &anchor - \\"multiline
quote\\"
- ",
    },
    "range": Range {
      "end": 35,
      "start": 18,
    },
    "tag": null,
    "type": "DOUBLE",
    "valueRange": Range {
      "end": 35,
      "start": 18,
    },
  },
  "range": Range {
    "end": 35,
    "start": 2,
  },
  "raw": "- \\"multiline
quote\\"",
  "tag": "tag!",
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 35,
    "start": 16,
  },
}
`;

exports[`seq items "- -plain value" bare 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "- -plain value",
    },
    "range": Range {
      "end": 14,
      "start": 2,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 14,
      "start": 2,
    },
  },
  "range": Range {
    "end": 14,
    "start": 0,
  },
  "raw": "- -plain value",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 14,
    "start": 0,
  },
}
`;

exports[`seq items "- -plain value" complex mapping key 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "? - -plain value
: ",
    },
    "range": Range {
      "end": 16,
      "start": 4,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 16,
      "start": 4,
    },
  },
  "range": Range {
    "end": 16,
    "start": 2,
  },
  "raw": "- -plain value",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 16,
    "start": 2,
  },
}
`;

exports[`seq items "- -plain value" flow seq value 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "[ - -plain value
]",
    },
    "range": Range {
      "end": 16,
      "start": 4,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 16,
      "start": 4,
    },
  },
  "range": Range {
    "end": 16,
    "start": 2,
  },
  "raw": "- -plain value",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 16,
    "start": 2,
  },
}
`;

exports[`seq items "- -plain value" indented block 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "    - - -plain value
  x",
    },
    "range": Range {
      "end": 20,
      "start": 8,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 20,
      "start": 8,
    },
  },
  "range": Range {
    "end": 20,
    "start": 6,
  },
  "raw": "- -plain value",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 20,
    "start": 6,
  },
}
`;

exports[`seq items "- -plain value" newline before & after 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "
- -plain value
",
    },
    "range": Range {
      "end": 15,
      "start": 3,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 15,
      "start": 3,
    },
  },
  "range": Range {
    "end": 15,
    "start": 1,
  },
  "raw": "- -plain value",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 15,
    "start": 1,
  },
}
`;

exports[`seq items "- -plain value" seq value 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "- - -plain value
- ",
    },
    "range": Range {
      "end": 16,
      "start": 4,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 16,
      "start": 4,
    },
  },
  "range": Range {
    "end": 16,
    "start": 2,
  },
  "raw": "- -plain value",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 16,
    "start": 2,
  },
}
`;

exports[`seq items "- -plain value" with comment 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": Range {
      "end": 34,
      "start": 19,
    },
    "doc": Document {
      "src": "
  - -plain value #comment # here!
",
    },
    "range": Range {
      "end": 34,
      "start": 5,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 17,
      "start": 5,
    },
  },
  "range": Range {
    "end": 34,
    "start": 3,
  },
  "raw": "- -plain value",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 17,
    "start": 3,
  },
}
`;

exports[`seq items "- -plain value" with props 1`] = `
CollectionItem {
  "anchor": "anchor",
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "- !tag! &anchor - -plain value
- ",
    },
    "range": Range {
      "end": 30,
      "start": 18,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 30,
      "start": 18,
    },
  },
  "range": Range {
    "end": 30,
    "start": 2,
  },
  "raw": "- -plain value",
  "tag": "tag!",
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 30,
    "start": 16,
  },
}
`;

exports[`seq items "-\\n  \\n\\n    multiline plain" bare 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "-
  

    multiline plain",
    },
    "range": Range {
      "end": 25,
      "start": 10,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 25,
      "start": 10,
    },
  },
  "range": Range {
    "end": 25,
    "start": 0,
  },
  "raw": "-
  

    multiline plain",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 25,
    "start": 0,
  },
}
`;

exports[`seq items "-\\n  \\n\\n    multiline plain" complex mapping key 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "? -
  

    multiline plain
: ",
    },
    "range": Range {
      "end": 27,
      "start": 12,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 27,
      "start": 12,
    },
  },
  "range": Range {
    "end": 27,
    "start": 2,
  },
  "raw": "-
  

    multiline plain",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 27,
    "start": 2,
  },
}
`;

exports[`seq items "-\\n  \\n\\n    multiline plain" flow seq value 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "[ -
  

    multiline plain
]",
    },
    "range": Range {
      "end": 27,
      "start": 12,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 27,
      "start": 12,
    },
  },
  "range": Range {
    "end": 27,
    "start": 2,
  },
  "raw": "-
  

    multiline plain",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 27,
    "start": 2,
  },
}
`;

exports[`seq items "-\\n  \\n\\n    multiline plain" indented block 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "    - -
  

    multiline plain
  x",
    },
    "range": Range {
      "end": 31,
      "start": 16,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 31,
      "start": 16,
    },
  },
  "range": Range {
    "end": 31,
    "start": 6,
  },
  "raw": "-
  

    multiline plain",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 31,
    "start": 6,
  },
}
`;

exports[`seq items "-\\n  \\n\\n    multiline plain" newline before & after 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "
-
  

    multiline plain
",
    },
    "range": Range {
      "end": 26,
      "start": 11,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 26,
      "start": 11,
    },
  },
  "range": Range {
    "end": 26,
    "start": 1,
  },
  "raw": "-
  

    multiline plain",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 26,
    "start": 1,
  },
}
`;

exports[`seq items "-\\n  \\n\\n    multiline plain" seq value 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "- -
  

    multiline plain
- ",
    },
    "range": Range {
      "end": 27,
      "start": 12,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 27,
      "start": 12,
    },
  },
  "range": Range {
    "end": 27,
    "start": 2,
  },
  "raw": "-
  

    multiline plain",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 27,
    "start": 2,
  },
}
`;

exports[`seq items "-\\n  \\n\\n    multiline plain" with comment 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": Range {
    "end": 21,
    "start": 6,
  },
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "
  - #comment # here!
  

    multiline plain
",
    },
    "range": Range {
      "end": 45,
      "start": 30,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 45,
      "start": 30,
    },
  },
  "range": Range {
    "end": 45,
    "start": 3,
  },
  "raw": "- #comment # here!
  

    multiline plain",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 45,
    "start": 3,
  },
}
`;

exports[`seq items "-\\n  \\n\\n    multiline plain" with props 1`] = `
CollectionItem {
  "anchor": "anchor",
  "commentRange": null,
  "indicator": "-",
  "item": Scalar {
    "anchor": null,
    "blockStyle": null,
    "commentRange": null,
    "doc": Document {
      "src": "- !tag! &anchor -
  

    multiline plain
- ",
    },
    "range": Range {
      "end": 41,
      "start": 26,
    },
    "tag": null,
    "type": "PLAIN",
    "valueRange": Range {
      "end": 41,
      "start": 26,
    },
  },
  "range": Range {
    "end": 41,
    "start": 2,
  },
  "raw": "-
  

    multiline plain",
  "tag": "tag!",
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 41,
    "start": 16,
  },
}
`;

exports[`seq items "-\\t[ 1, 2 ]" bare 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": FlowContainer {
    "anchor": null,
    "commentRange": null,
    "doc": Document {
      "src": "-	[ 1, 2 ]",
    },
    "items": Array [
      "[",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "-	[ 1, 2 ]",
        },
        "range": Range {
          "end": 5,
          "start": 4,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 5,
          "start": 4,
        },
      },
      ",",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "-	[ 1, 2 ]",
        },
        "range": Range {
          "end": 9,
          "start": 7,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 8,
          "start": 7,
        },
      },
      "]",
    ],
    "range": Range {
      "end": 10,
      "start": 2,
    },
    "tag": null,
    "type": "FLOW_SEQ",
    "valueRange": Range {
      "end": 10,
      "start": 2,
    },
  },
  "range": Range {
    "end": 10,
    "start": 0,
  },
  "raw": "-	[ 1, 2 ]",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 10,
    "start": 0,
  },
}
`;

exports[`seq items "-\\t[ 1, 2 ]" complex mapping key 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": FlowContainer {
    "anchor": null,
    "commentRange": null,
    "doc": Document {
      "src": "? -	[ 1, 2 ]
: ",
    },
    "items": Array [
      "[",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "? -	[ 1, 2 ]
: ",
        },
        "range": Range {
          "end": 7,
          "start": 6,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 7,
          "start": 6,
        },
      },
      ",",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "? -	[ 1, 2 ]
: ",
        },
        "range": Range {
          "end": 11,
          "start": 9,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 10,
          "start": 9,
        },
      },
      "]",
    ],
    "range": Range {
      "end": 12,
      "start": 4,
    },
    "tag": null,
    "type": "FLOW_SEQ",
    "valueRange": Range {
      "end": 12,
      "start": 4,
    },
  },
  "range": Range {
    "end": 12,
    "start": 2,
  },
  "raw": "-	[ 1, 2 ]",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 12,
    "start": 2,
  },
}
`;

exports[`seq items "-\\t[ 1, 2 ]" flow seq value 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": FlowContainer {
    "anchor": null,
    "commentRange": null,
    "doc": Document {
      "src": "[ -	[ 1, 2 ]
]",
    },
    "items": Array [
      "[",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "[ -	[ 1, 2 ]
]",
        },
        "range": Range {
          "end": 7,
          "start": 6,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 7,
          "start": 6,
        },
      },
      ",",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "[ -	[ 1, 2 ]
]",
        },
        "range": Range {
          "end": 11,
          "start": 9,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 10,
          "start": 9,
        },
      },
      "]",
    ],
    "range": Range {
      "end": 12,
      "start": 4,
    },
    "tag": null,
    "type": "FLOW_SEQ",
    "valueRange": Range {
      "end": 12,
      "start": 4,
    },
  },
  "range": Range {
    "end": 12,
    "start": 2,
  },
  "raw": "-	[ 1, 2 ]",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 12,
    "start": 2,
  },
}
`;

exports[`seq items "-\\t[ 1, 2 ]" indented block 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": FlowContainer {
    "anchor": null,
    "commentRange": null,
    "doc": Document {
      "src": "    - -	[ 1, 2 ]
  x",
    },
    "items": Array [
      "[",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "    - -	[ 1, 2 ]
  x",
        },
        "range": Range {
          "end": 11,
          "start": 10,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 11,
          "start": 10,
        },
      },
      ",",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "    - -	[ 1, 2 ]
  x",
        },
        "range": Range {
          "end": 15,
          "start": 13,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 14,
          "start": 13,
        },
      },
      "]",
    ],
    "range": Range {
      "end": 16,
      "start": 8,
    },
    "tag": null,
    "type": "FLOW_SEQ",
    "valueRange": Range {
      "end": 16,
      "start": 8,
    },
  },
  "range": Range {
    "end": 16,
    "start": 6,
  },
  "raw": "-	[ 1, 2 ]",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 16,
    "start": 6,
  },
}
`;

exports[`seq items "-\\t[ 1, 2 ]" newline before & after 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": FlowContainer {
    "anchor": null,
    "commentRange": null,
    "doc": Document {
      "src": "
-	[ 1, 2 ]
",
    },
    "items": Array [
      "[",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "
-	[ 1, 2 ]
",
        },
        "range": Range {
          "end": 6,
          "start": 5,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 6,
          "start": 5,
        },
      },
      ",",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "
-	[ 1, 2 ]
",
        },
        "range": Range {
          "end": 10,
          "start": 8,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 9,
          "start": 8,
        },
      },
      "]",
    ],
    "range": Range {
      "end": 11,
      "start": 3,
    },
    "tag": null,
    "type": "FLOW_SEQ",
    "valueRange": Range {
      "end": 11,
      "start": 3,
    },
  },
  "range": Range {
    "end": 11,
    "start": 1,
  },
  "raw": "-	[ 1, 2 ]",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 11,
    "start": 1,
  },
}
`;

exports[`seq items "-\\t[ 1, 2 ]" seq value 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": FlowContainer {
    "anchor": null,
    "commentRange": null,
    "doc": Document {
      "src": "- -	[ 1, 2 ]
- ",
    },
    "items": Array [
      "[",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "- -	[ 1, 2 ]
- ",
        },
        "range": Range {
          "end": 7,
          "start": 6,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 7,
          "start": 6,
        },
      },
      ",",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "- -	[ 1, 2 ]
- ",
        },
        "range": Range {
          "end": 11,
          "start": 9,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 10,
          "start": 9,
        },
      },
      "]",
    ],
    "range": Range {
      "end": 12,
      "start": 4,
    },
    "tag": null,
    "type": "FLOW_SEQ",
    "valueRange": Range {
      "end": 12,
      "start": 4,
    },
  },
  "range": Range {
    "end": 12,
    "start": 2,
  },
  "raw": "-	[ 1, 2 ]",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 12,
    "start": 2,
  },
}
`;

exports[`seq items "-\\t[ 1, 2 ]" with comment 1`] = `
CollectionItem {
  "anchor": null,
  "commentRange": null,
  "indicator": "-",
  "item": FlowContainer {
    "anchor": null,
    "commentRange": Range {
      "end": 30,
      "start": 15,
    },
    "doc": Document {
      "src": "
  -	[ 1, 2 ] #comment # here!
",
    },
    "items": Array [
      "[",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "
  -	[ 1, 2 ] #comment # here!
",
        },
        "range": Range {
          "end": 8,
          "start": 7,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 8,
          "start": 7,
        },
      },
      ",",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "
  -	[ 1, 2 ] #comment # here!
",
        },
        "range": Range {
          "end": 12,
          "start": 10,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 11,
          "start": 10,
        },
      },
      "]",
    ],
    "range": Range {
      "end": 30,
      "start": 5,
    },
    "tag": null,
    "type": "FLOW_SEQ",
    "valueRange": Range {
      "end": 13,
      "start": 5,
    },
  },
  "range": Range {
    "end": 30,
    "start": 3,
  },
  "raw": "-	[ 1, 2 ]",
  "tag": null,
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 13,
    "start": 3,
  },
}
`;

exports[`seq items "-\\t[ 1, 2 ]" with props 1`] = `
CollectionItem {
  "anchor": "anchor",
  "commentRange": null,
  "indicator": "-",
  "item": FlowContainer {
    "anchor": null,
    "commentRange": null,
    "doc": Document {
      "src": "- !tag! &anchor -	[ 1, 2 ]
- ",
    },
    "items": Array [
      "[",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "- !tag! &anchor -	[ 1, 2 ]
- ",
        },
        "range": Range {
          "end": 21,
          "start": 20,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 21,
          "start": 20,
        },
      },
      ",",
      Scalar {
        "anchor": null,
        "blockStyle": null,
        "commentRange": null,
        "doc": Document {
          "src": "- !tag! &anchor -	[ 1, 2 ]
- ",
        },
        "range": Range {
          "end": 25,
          "start": 23,
        },
        "tag": null,
        "type": "PLAIN",
        "valueRange": Range {
          "end": 24,
          "start": 23,
        },
      },
      "]",
    ],
    "range": Range {
      "end": 26,
      "start": 18,
    },
    "tag": null,
    "type": "FLOW_SEQ",
    "valueRange": Range {
      "end": 26,
      "start": 18,
    },
  },
  "range": Range {
    "end": 26,
    "start": 2,
  },
  "raw": "-	[ 1, 2 ]",
  "tag": "tag!",
  "type": "SEQ_ITEM",
  "valueRange": Range {
    "end": 26,
    "start": 16,
  },
}
`;
